Missing textures renders as black color (cycles) #53289

Closed
opened 2017-11-10 12:49:53 +01:00 by Denis Belov · 7 comments

System Information
Win 7x64 GTX 1070, Debian8 x64 GTX 770

Blender Version
Broken: 2.79.0-git.956ee5e and later
Worked: 2.79.0-git.fbb9b70

Short description of error
Missing textures renders as black color instead of pink in viewport using GPU. CPU renders pink

Exact steps for others to reproduce the error
Add empty image texture to object or world. GPU renders black color, CPU renders pink color

**System Information** Win 7x64 GTX 1070, Debian8 x64 GTX 770 **Blender Version** Broken: 2.79.0-git.956ee5e and later Worked: 2.79.0-git.fbb9b70 **Short description of error** Missing textures renders as black color instead of pink in viewport using GPU. CPU renders pink **Exact steps for others to reproduce the error** Add empty image texture to object or world. GPU renders black color, CPU renders pink color
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @DenisBelov

Added subscriber: @DenisBelov

Added subscriber: @zeauro

Added subscriber: @zeauro

Confirmed on linux ubuntu16.04 Titan Black with master db7a78a

Confirmed on linux ubuntu16.04 Titan Black with master db7a78a

This issue was referenced by blender/cycles@8ba0ba260a

This issue was referenced by blender/cycles@8ba0ba260ac783a510febc1282b1a3f7f9972ff3

This issue was referenced by e568c1a975

This issue was referenced by e568c1a9757a5d4f8a52822cbbe772d0ac4da78b

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#53289
No description provided.