Fix T53289: CUDA missing textures not showing pink, after recent changes.